--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,3 +17,6 @@ h1,h2,h3,h4,h5{
 .MuiInput-underline:hover:not(.Mui-disabled):before, .MuiInput-underline:after, .MuiInput-underline:before{
   border-bottom: 0px !important;
 }
+a{
+  color: #084f1f;
+}
