--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,3 +58,45 @@ a{
 .carousel .control-dots .dot.selected{
 	background-color: #f9cd7d;
 }
+.strikethrough {
+	position: relative;
+	font-size: 18px;
+	font-weight: 500;
+	display: inline-block;
+}
+.strikethrough:before {
+	position: absolute;
+	content: "";
+	left: 0;
+	top: 50%;
+	right: 0;
+	border-top: 1px solid;
+	border-color: inherit;
+
+	-webkit-transform: rotate(-5deg);
+	-moz-transform: rotate(-5deg);
+	-ms-transform: rotate(-5deg);
+	-o-transform: rotate(-5deg);
+	transform: rotate(-5deg);
+}
+.orderbutton{
+	box-shadow: 0px 4px 24px rgba(253,217,142);
+	color: #444444;
+	font-size: 16px;
+	padding-left: 20px;
+	 padding-right: 20px;
+	 height: 40px;
+	 
+
+	border: 1px solid rgb(255, 189, 47);
+
+  font-family: 'FSDiavloBold';
+
+  background: rgb(253,217,142);
+  background: linear-gradient(267deg, rgb(255, 212, 119) 0%, rgb(255, 216, 142) 45%, rgba(255, 221, 158) 52%, rgb(255, 221, 158) 57%, rgb(255, 209, 110) 100%);
+
+}
+.orderbutton>span{
+	line-height: 30px;
+
+}
