--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Poppins, Lato, -apple-system, Helvetica Neue, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+ 
+  font-family: Oswald, Poppins, Lato, -apple-system, Helvetica Neue, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, sans-serif;
     scroll-behavior: smooth;
 }
@@ -13,6 +14,15 @@ svg {
 }
 h1,h2,h3,h4,h5{
   margin: 0px;
+  font-weight: 400;
+}
+p{
+	font-weight: 400;
+	line-height: 30px;
+
+}
+li{
+	line-height: 25px;
 }
 .MuiInput-underline:hover:not(.Mui-disabled):before, .MuiInput-underline:after, .MuiInput-underline:before{
   border-bottom: 0px !important;
@@ -90,7 +100,7 @@ a{
 
 	border: 1px solid rgb(255, 189, 47);
 
-  font-family: 'FSDiavloBold';
+  font-family: 'Oswald';
 
   background: rgb(253,217,142);
   background: linear-gradient(267deg, rgb(255, 212, 119) 0%, rgb(255, 216, 142) 45%, rgba(255, 221, 158) 52%, rgb(255, 221, 158) 57%, rgb(255, 209, 110) 100%);
