--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
- 
+  background-color: #f5f5f9;
   font-family: Oswald, Poppins, Lato, -apple-system, Helvetica Neue, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, sans-serif;
     scroll-behavior: smooth;
