--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,3 +6,12 @@
   justify-content: center;
   align-items: center;
 }
+
+.whatsapp{
+  position: fixed;
+  right: 12px;
+  bottom: 18vh;
+  width: 40px;
+  height: 40px;
+  z-index: 99;
+}
